__tests__/__snapshots__/typechecker-test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nullthrows with flow 1`] = `""`;

exports[`nullthrows with flow 2`] = `
"__tests__/__fixtures__/flow-package/index.js:10
 10: var bad1: Object = obj;
                        ^^^ null. This type is incompatible with
 10: var bad1: Object = obj;
               ^^^^^^ object type

__tests__/__fixtures__/flow-package/index.js:10
 10: var bad1: Object = obj;
                        ^^^ undefined. This type is incompatible with
 10: var bad1: Object = obj;
               ^^^^^^ object type


Found 2 errors
"
`;

exports[`nullthrows with typescript 1`] = `""`;

exports[`nullthrows with typescript 2`] = `
"__tests__/__fixtures__/typescript-package/index.ts(9,5): error TS2322: Type 'string | null' is not assignable to type 'string'.
  Type 'null' is not assignable to type 'string'.
__tests__/__fixtures__/typescript-package/index.ts(11,5): error TS2322: Type 'string' is not assignable to type 'number'.
"
`;
